Updated html Title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Main Project Navigator</title>
 </head>
 <body>
     <a href="lvl1/Project 1/index.html"> Project 1</a>
