--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <a href="lvl1/Project 1/index.html"> Project 1</a>
+    <a href="lvl1/Project 2/index.html"> Project 2</a>
 </body>
 </html>
