--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Main Project Navigator</title>
 </head>
 <body>
-    <a href="lvl1/Project 1/index.html"> Project 1</a>
-    <a href="lvl1/Project 2/index.html"> Project 2</a>
+    <p><a href="lvl1/Project 1/index.html"> Project 1</a></p>
+    <p><a href="lvl1/Project 2/index.html"> Project 2</a></p>
 </body>
 </html>
