--- a/lvl1/Project 2/index.html
+++ b/lvl1/Project 2/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Project 2</title>
     <link
     href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css"
     rel="stylesheet"
@@ -21,6 +21,18 @@
             <div id="place">
                 <h3>(Berlin, Germany)</h3>
                 <h3><i class="ri-arrow-right-down-line"></i> Scroll Down</h3>
+            </div>
+        </div>
+        <div id="hero-img"></div>
+        <div id="about">
+            <h2>As a digital designer, I focus on producing top-notch and impactful digital experiences.</h2>
+            <div id="about-me">
+                <h4>(About Me)</h4>
+                <div id="smedia">
+                    <i class="ri-instagram-line"></i>
+                    <i class="ri-twitter-fill"></i>
+                    <i class="ri-dribbble-line"></i>
+                </div>
             </div>
         </div>
     </div>
